--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -810,85 +811,85 @@ $(window).load(function(){
 
 <div class="audioplayer">
   <audio id="wavesplayer" loop preload="none">
-    <source src="audio/waves.fade.mp4" type="audio/mp4" />
-    <source src="audio/waves.fade.ogg" type="audio/ogg" />
+    <source src="http://st3.mi4.org/waves.fade.mp4" type="audio/mp4" />
+    <source src="http://st3.mi4.org/waves.fade.ogg" type="audio/ogg" />
   </audio>
 </div>
 
 <div class="audioplayer">
   <audio id="wavesglueplayer" preload="auto">
-    <source src="audio/waves.glue.mp4" type="audio/mp4" />
-    <source src="audio/waves.glue.ogg" type="audio/ogg" />
+    <source src="http://stat3.orderedwords.com/waves.glue.mp4" type="audio/mp4" />
+    <source src="http://stat3.orderedwords.com/waves.glue.ogg" type="audio/ogg" />
   </audio>
 </div>
 
 <div class="audioplayer">
   <audio id="rainplayer" loop preload="none">
-    <source src="audio/rain.fade.mp4" type="audio/mp4">
-    <source src="audio/rain.fade.ogg" type="audio/ogg">
+    <source src="http://st2.mi4.org/rain.fade.mp4" type="audio/mp4">
+    <source src="http://st2.mi4.org/rain.fade.ogg" type="audio/ogg">
   </audio>
 </div>
 
 <div class="audioplayer">
   <audio id="rainglueplayer" preload="auto">
-    <source src="audio/rain.glue.mp4" type="audio/mp4">
-    <source src="audio/rain.glue.ogg" type="audio/ogg">
+    <source src="http://stat2.orderedwords.com/rain.glue.mp4" type="audio/mp4">
+    <source src="http://stat2.orderedwords.com/rain.glue.ogg" type="audio/ogg">
   </audio>
 </div>
 
 <div class="audioplayer">
   <audio id="thunderplayer" loop preload="none">
-    <source src="audio/thunder.fade.mp4" type="audio/mp4">
-    <source src="audio/thunder.fade.ogg" type="audio/ogg">
+    <source src="http://st3.mi4.org/thunder.fade.mp4" type="audio/mp4">
+    <source src="http://st3.mi4.org/thunder.fade.ogg" type="audio/ogg">
   </audio>
 </div>
 
 <div class="audioplayer">
   <audio id="thunderglueplayer" preload="auto">
-    <source src="audio/thunder.glue.mp4" type="audio/mp4">
-    <source src="audio/thunder.glue.ogg" type="audio/ogg">
+    <source src="http://stat3.orderedwords.com/thunder.glue.mp4" type="audio/mp4">
+    <source src="http://stat3.orderedwords.com/thunder.glue.ogg" type="audio/ogg">
   </audio>
 </div>
 
 <div class="audioplayer">
   <audio id="fireplayer" loop preload="none">
-    <source src="audio/fire.fade.mp4" type="audio/mp4">
-    <source src="audio/fire.fade.ogg" type="audio/ogg">
+    <source src="http://st1.mi4.org/fire.fade.mp4" type="audio/mp4">
+    <source src="http://st1.mi4.org/fire.fade.ogg" type="audio/ogg">
   </audio>
 </div>
 
 <div class="audioplayer">
   <audio id="fireglueplayer" preload="auto">
-    <source src="audio/fire.glue.mp4" type="audio/mp4">
-    <source src="audio/fire.glue.ogg" type="audio/ogg">
+    <source src="http://stat1.orderedwords.com/fire.glue.mp4" type="audio/mp4">
+    <source src="http://stat1.orderedwords.com/fire.glue.ogg" type="audio/ogg">
   </audio>
 </div>
 
 <div class="audioplayer">
   <audio id="birdsplayer" loop preload="none">
-    <source src="audio/birds.fade.mp4" type="audio/mp4">
-    <source src="audio/birds.fade.ogg" type="audio/ogg">
+    <source src="http://st1.mi4.org/birds.fade.mp4" type="audio/mp4">
+    <source src="http://st1.mi4.org/birds.fade.ogg" type="audio/ogg">
   </audio>
 </div>
 
 <div class="audioplayer">
   <audio id="birdsglueplayer" preload="auto">
-    <source src="audio/birds.glue.mp4" type="audio/mp4">
-    <source src="audio/birds.glue.ogg" type="audio/ogg">
+    <source src="http://stat1.orderedwords.com/birds.glue.mp4" type="audio/mp4">
+    <source src="http://stat1.orderedwords.com/birds.glue.ogg" type="audio/ogg">
   </audio>
 </div>
 
 <div class="audioplayer">
   <audio id="humansplayer" loop preload="none">
-    <source src="audio/humans.fade.mp4" type="audio/mp4">
-    <source src="audio/humans.fade.ogg" type="audio/ogg">
+    <source src="http://st2.mi4.org/humans.fade.mp4" type="audio/mp4">
+    <source src="http://st2.mi4.org/humans.fade.ogg" type="audio/ogg">
   </audio>
 </div>
 
 <div class="audioplayer">
   <audio id="humansglueplayer" preload="auto">
-    <source src="audio/humans.glue.mp4" type="audio/mp4">
-    <source src="audio/humans.glue.ogg" type="audio/ogg">
+    <source src="http://stat2.orderedwords.com/humans.glue.mp4" type="audio/mp4">
+    <source src="http://stat2.orderedwords.com/humans.glue.ogg" type="audio/ogg">
   </audio>
 </div>
 
