cicadas for testing

--- a/index.html
+++ b/index.html
@@ -795,6 +795,14 @@ $(window).load(function(){
   </div>
 </div>
 
+<div id="cicadatest-slider-container" class="sliders">
+  <div id="cicadatest-slider-background" class="slider-background"></div>
+  <div id="cicadatest-slider-container-inner" class="slider-inner">
+    <div class="labelfix"> <label for="humans-slider">Cicadas</label> </div>
+      <input type="range" id="humans-slider" value="0.0" min="0" max="1" step="0.01" class="ui-hidden-accessible"/>
+  </div>
+</div>
+
 </div>
 
 <div id="image-preload-1">
@@ -890,6 +898,12 @@ $(window).load(function(){
   <audio id="humansglueplayer" preload="auto">
     <source src="http://stat2.orderedwords.com/humans.glue.mp4" type="audio/mp4">
     <source src="http://stat2.orderedwords.com/humans.glue.ogg" type="audio/ogg">
+  </audio>
+</div>
+
+<div class="audioplayer">
+  <audio id="cicadatest" controls loop>
+    <source src="" type="audio/mp4">
   </audio>
 </div>
 
