added social graph nonsense

--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
 <meta charset=utf-8 />
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <title>A Soft Murmur</title>
+<meta name="description" content="Mix ambient sounds together to wash away distraction and help you focus or relax" />
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="js/jquery.mobile.custom.structure.min.css" />
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/jquery.mobile.custom.min.js"></script>
 <script src="js/hotkeys.js"></script>
-
 <link rel="icon" href="favicon.png">
+
+<!-- Twitter Card data -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@asoftmurmur">
+<meta name="twitter:title" content="A Soft Murmur">
+<meta name="twitter:description" content="Mix ambient sounds together to wash away distraction and help you focus or relax">
+<meta name="twitter:creator" content="@asoftmurmur">
+<meta name="twitter:image" content="http://asoftmurmur.com/img/meta.jpg">
+
+<!-- Open Graph data -->
+<meta property="og:title" content="A Soft Murmur" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://asoftmurmur.com" />
+<meta property="og:image" content="http://asoftmurmur.com/img/meta.jpg" />
+<meta property="og:description" content="Mix ambient sounds together to wash away distraction and help you focus or relax" /> 
+<meta property="og:site_name" content="A Soft Murmur" />
+
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
