--- a/info.html
+++ b/info.html
@@ -24,7 +24,8 @@
   <li><a href="http://www.freesound.org/people/inchadney/sounds/132534/">Fireplace[2] by inchadney</a> (CC-0) </li>
   <li><a href="http://www.freesound.org/people/inchadney/sounds/56611/">Morning in the country by inchadney</a> (CC-Attribution) </li>
   <li><a href="http://www.freesound.org/people/Audionautics/sounds/136977/">Crowd Long by Audionautics</a> (CC-Attribution)</li>
-  <li><a href="http://www.freesound.org/people/Matias44/sounds/173920/">Murmullo Restaurant by Matias44</a> (CC-0)</li>  
+  <li><a href="http://www.freesound.org/people/Matias44/sounds/173920/">Murmullo Restaurant by Matias44</a> (CC-0)</li>
+  <li><a href="http://www.freesound.org/people/martypinso/sounds/22604/">Crickets Texas by martypinso</a> (CC-0)</li>    
 </ul>
 
 <p>The following images were used:</p>
@@ -36,7 +37,11 @@
   <li><a href="http://www.flickr.com/photos/dr_pete/80464938/">Fire 1 by Dr. Pete</a> (CC-Attribution)</li>  
   <li><a href="http://www.flickr.com/photos/ddebold/7913370282/">Flock of birds at Sunnyvale Baylands by Don DeBold</a> (CC-Attribution)</li>    
   <li><a href="http://www.flickr.com/photos/neo_ii/7483010074/">Coffee Shop near Times Square by Neo_II</a> (CC-Attribution)</li>
+  <li><a href="http://www.sxc.hu/photo/235881/">Static Snow by arkine</a> (SXC Royalty Free)</li>
+  <li><a href="http://www.flickr.com/photos/8377938@N05/3890413973/">grass and grey sky by Alfred Straaf</a> (CC-Attribution)</li>
 </ul>
+
+<p>These photos appear on this website in an edited form. They have been cropped, desaturated and had their contrast levels changed.</p>
 
 <h2>About the Project</h2>
 
