--- a/info.html
+++ b/info.html
@@ -39,6 +39,7 @@
   <li><a href="http://www.flickr.com/photos/neo_ii/7483010074/">Coffee Shop near Times Square by Neo_II</a> (CC-Attribution)</li>
   <li><a href="http://www.sxc.hu/photo/235881/">Static Snow by arkine</a> (SXC Royalty Free)</li>
   <li><a href="http://www.flickr.com/photos/8377938@N05/3890413973/">grass and grey sky by Alfred Straaf</a> (CC-Attribution)</li>
+  <li><a href="http://www.flickr.com/photos/swhitworth/8618603731/">buddhist singing bowl by Sarah Whitworth</a> (CC-Attribution)</li> 
 </ul>
 
 <p>These photos appear on this website in an edited form. They have been cropped, desaturated and had their contrast levels changed.</p>
