fixed double "your mix" in top links

--- a/index.html
+++ b/index.html
@@ -1624,7 +1624,7 @@ share.click( function() {
     $('#updates').hide();
   }
   else {
-    share.text("Share your mix");
+    share.text("Share");
     share.removeClass( "share-active" );
     $('#about-top').fadeIn( fadeInOutMs );
     $('#updates').fadeIn( fadeInOutMs );
