concatenate javascript and css

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
 <title>A Soft Murmur</title>
 <meta name="description" content="Mix ambient sounds together to wash away distraction and help you focus or relax" />
 <link rel="stylesheet" href="style.css" />
-<link rel="stylesheet" href="js/jquery.mobile.custom.structure.min.css" />
-<script src="js/jquery-1.9.1.min.js"></script>
-<script src="js/jquery.mobile.custom.min.js"></script>
-<script src="js/hotkeys.js"></script>
+<script src="js/concat.js"></script>
 <link rel="icon" href="favicon.png">
 
 <!-- Twitter Card data -->
