Hide loading dialogue when slider is collapsed

--- a/index.html
+++ b/index.html
@@ -931,8 +931,9 @@ humansCollapseButton.click(
 
   function() {
   collapseSliderHumans();
+  $('#loading-humans').hide();
   }
-
+  
 );
 
 //
@@ -945,6 +946,7 @@ birdsCollapseButton.click(
 
   function() {
   collapseSliderBirds();
+  $('#loading-birds').hide();
   }
 
 );
@@ -959,8 +961,8 @@ rainCollapseButton.click(
 
   function() {
   collapseSliderRain();
+  $('#loading-rain').hide();
   }
-
 );
 
 //
@@ -973,8 +975,8 @@ thunderCollapseButton.click(
 
   function() {
   collapseSliderThunder();
+  $('#loading-thunder').hide();
   }
-
 );
 
 //
@@ -987,8 +989,8 @@ fireCollapseButton.click(
 
   function() {
   collapseSliderFire();
+  $('#loading-fire').hide();
   }
-
 );
 
 //
@@ -1001,8 +1003,8 @@ wavesCollapseButton.click(
 
   function() {
   collapseSliderWaves();
+  $('#loading-waves').hide();
   }
-
 );
 
 //
@@ -1015,8 +1017,8 @@ cricketsCollapseButton.click(
 
   function() {
   collapseSliderCrickets();
+  $('#loading-crickets').hide();
   }
-
 );
 
 //
@@ -1029,8 +1031,8 @@ singingbowlsCollapseButton.click(
 
   function() {
   collapseSliderSingingbowls();
+  $('#loading-singingbowls').hide();
   }
-
 );
 
 //
@@ -1043,8 +1045,8 @@ whitenoiseCollapseButton.click(
 
   function() {
   collapseSliderWhitenoise();
+  $('#loading-whitenoise').hide();
   }
-
 );
 
 //
