--- a/index.html
+++ b/index.html
@@ -2193,14 +2193,14 @@ $('#mc-embedded-subscribe').click( function() {
 
 // Update stuff
 
-$(document).bind('keydown', 'space', function() {
+$(document).bind('keydown', 'space', function(event) {
 
   event.preventDefault();
   ppbutton.trigger( "click" );
   
 });
 
-$(document).bind('keydown', 't', function() {
+$(document).bind('keydown', 't', function(event) {
 
   event.preventDefault();
   optionsbutton.trigger( "click" );
